# libchronic

./: .autotools  .cproject  .project  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  libchronic-1.0.pc.in
include/: Makefile  Makefile.am  Makefile.in
include/chronic/: Makefile.am  Makefile.in  chronic.h
src/: Makefile.am  Makefile.in  architecture.c  chronic.c  file.c  libchronic
